# DataToVideo

./: .gitignore  Cargo.toml
crates/structs/: Cargo.toml
crates/structs/src/: lib.rs
crates/to_video/: .gitignore  Cargo.toml
crates/to_video/src/: color.rs  constants.rs  lib.rs
crates/to_video/src/imageproc/: definitions.rs  mod.rs  rect.rs
crates/to_video/src/imageproc/drawing/: canvas.rs  draw.rs  draw_mut.rs  draw_text.rs  mod.rs
crates/to_video/src/slide/: element.rs  mod.rs
crates/to_video/src/video/: config.rs  ffmpeg.rs  mod.rs  slide.rs
crates/to_video_cmd/: Cargo.toml  data.json  info.json
crates/to_video_cmd/example/: Info_example.json
crates/to_video_cmd/src/: init.rs  lib.rs  main.rs
crates/to_video_egui/: Cargo.toml
crates/to_video_egui/src/: main.rs
crates/to_video_egui/src/gui/: app.rs  mod.rs
example/: Data_example.json  Info_example.json  data.json  info.json
