[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/to_video_cmd"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["<hjuy1> <<EMAIL>>"]

[workspace.dependencies]
structs = { path = "crates/structs" }
to_video = { path = "crates/to_video" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
scraper = { version = "0.23", default-features = false }
md-5 = { version = "0.10", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "cookies",
  "default-tls",
  "json",
] }
tokio = { version = "1.45", default-features = false, features = [
  "fs",
  "macros",
] }
ab_glyph = { version = "0.2" }
image = { version = "0.25", default-features = false, features = ["png"] }
# eframe = { version = "0.31", default-features = false, features = ["glow"] }
# egui_extras = { version = "0.31", features = ["all_loaders"] }
