[package]
name = "to_video"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ab_glyph.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
structs.workspace = true
# eframe.workspace = true
# egui_extras.workspace = true
